--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.8",
     "express": "^4.21.1",
     "moment": "^2.30.1",
-    "moment-timezone": "^0.5.46"
+    "moment-timezone": "^0.5.46",
+    "path": "^0.12.7"
   }
 }
